--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
   color: royalblue;
+  background: ivory;
 }
 .jumbotron {
     margin: 0;
@@ -13,7 +14,6 @@ table {
 }
 .main {
   padding-top: 1em;
-  background: ivory;
 }
 .colorDivClass {
   height: 30px; 
@@ -109,6 +109,6 @@ table {
  iframe {
  	/*position: absolute;
  	left: -50px;*/
- 	height: 0;
- 	width: 0;
+ 	height: 400px;
+ 	width: 100%;
  }
